# endurain-mcp

./: .env.example  README.md  docker-compose.yaml  openapi.json  pyproject.toml
src/endurain_mcp/: __init__.py  __main__.py  client.py  server.py
src/endurain_mcp/tools/: __init__.py  activities.py  gears.py  health.py  profile.py  users.py  utils.py
tests/: conftest.py  test_client.py
tests/test_tools/: test_activities.py  test_health.py  test_users.py
