[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endurain-mcp"
version = "0.1.0"
description = "MCP server for the Endurain self-hosted fitness tracking API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[project.scripts]
endurain-mcp = "endurain_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/endurain_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
